src/test/deca/context/valid/assign_classes.deca
class A{
int x;
}
class B extends A{
int y;
}
{
A a;
B b;
a=b;
b=a;
}