src/test/deca/context/invalid/selection_invalid2.deca
class A{
protected int x;
}
class B { 
A a;
int x;
}
{
B b;
int y=b.a.x;
}
